--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -51,7 +51,7 @@ jobs:
 
 ########################################3
 
-  # Workflow: Crea automáticamente un Pull Request desde QA hacia Integration
+  # Workflow: Crea automáticamente un Pull Request desde QA hacia Dev
   # cuando el merge a dev fue exitoso y las pruebas pasaron correctamente.
 
     # Job 2: Crear Pull Request usando la API de GitHub
