--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -1,20 +1,20 @@
-permissions:
-  actions: read
-  contents: write
-  pull-requests: write
-  security-events: write
-
 name: Run QA Tests and Create Integration PR
 
 on:
   pull_request:
     branches:
-      - qa          # se ejecuta cuando hay PR hacia qa
+      - qa
     types:
       - opened
       - synchronize
       - reopened
       - ready_for_review
+
+permissions:
+  actions: read
+  contents: write
+  pull-requests: write
+  security-events: write
 
 jobs:
   test:
@@ -22,12 +22,11 @@ jobs:
     # Solo ejecuta si el PR viene desde dev
     if: github.head_ref == 'dev'
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/qa.yml@main
-    #with:
-    #  sonar-token: ${{ secrets.SONAR_TOKEN }}
-    #  branch: "qa"
+    # Si necesitas pasar secrets, descomenta:
+    # secrets:
+    #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   # Job 2: Crear Pull Request desde QA hacia Integration
-  # Se ejecuta automáticamente cuando los tests pasan correctamente
   create-pr:
     name: Create PR QA to Integration
     needs: test
@@ -105,11 +104,3 @@ jobs:
 
             console.log(`✅ Pull Request created: #${pr.number}`);
             console.log(`URL: ${pr.html_url}`);
-
-            // Opcional: Asignar revisores automáticamente
-            // await github.rest.pulls.requestReviewers({
-            //   owner,
-            //   repo,
-            //   pull_number: pr.number,
-            //   reviewers: ['tu-usuario']
-            // });
