--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -1,14 +1,10 @@
 name: Run QA Tests and Create Integration PR
 
+
 on:
-  push:
-    branches:
-      - qa
-      - dev
   pull_request:
     branches:
       - qa
-      - dev
     types:
       - opened
       - synchronize
@@ -20,6 +16,16 @@ permissions:
   contents: write
   pull-requests: write
   security-events: write
+
+jobs:
+  # Ejecuta los tests del reusable workflow solo si el PR viene desde dev
+  test:
+    name: Run QA Tests
+    if: github.head_ref == 'dev'
+    uses: ./.github/workflows/reusable-qa.yml
+    with:
+      branch: 'qa'
+    secrets: inherit
 
 jobs:
   test:
