--- a/.github/workflows/test-base.yml
+++ b/.github/workflows/test-base.yml
@@ -49,93 +49,110 @@ jobs:
           git push origin dev                          # Envía los cambios fusionados a la rama dev
                                           # Envía los cambios al repositorio remoto
 
+
+  # ───────────────────────────────────────────────────────────
+  # Job 2: Llamar al workflow reusable
+  # ───────────────────────────────────────────────────────────
+  create-pr-to-integration:
+    name: Create PR to Integration
+    needs: test  # ⚙️ Solo se ejecuta si los tests pasan
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/pull-request.yml@main  # 📂 Ruta al workflow reusable
+    with:
+      source_branch: 'dev'                    # Desde dev
+      target_branch: 'qa'                     # Hacia qa
+      pr_title: '🚀 Deploy DEV to QA'
+      environment: 'qa'
+      labels: 'automated,deployment,qa,dev'
+
+
+
 ########################################3
 
   # Workflow: Crea automáticamente un Pull Request desde QA hacia Dev
   # cuando el merge a dev fue exitoso y las pruebas pasaron correctamente.
 
-    # Job 2: Crear Pull Request usando la API de GitHub
-  create-pr:
-      name: Create PR to QA
-      needs: merge-to-dev
-      runs-on: ubuntu-latest
-      if: success()
+  #   # Job 2: Crear Pull Request usando la API de GitHub
+  # create-pr:
+  #     name: Create PR to QA
+  #     needs: merge-to-dev
+  #     runs-on: ubuntu-latest
+  #     if: success()
   
-      permissions:
-        contents: read
-        pull-requests: write
+      # permissions:
+      #   contents: read
+      #   pull-requests: write
   
-      steps:
-        - name: Create Pull Request via API
-          uses: actions/github-script@v7
-          with:
-            script: |
-              const { owner, repo } = context.repo;
+      # steps:
+      #   - name: Create Pull Request via API
+      #     uses: actions/github-script@v7
+      #     with:
+      #       script: |
+      #         const { owner, repo } = context.repo;
               
-              // Verificar si ya existe un PR abierto de dev a qa
-              const { data: existingPRs } = await github.rest.pulls.list({
-                owner,
-                repo,
-                head: `${owner}:dev`,
-                base: 'qa',
-                state: 'open'
-              });
+      #         // Verificar si ya existe un PR abierto de dev a qa
+      #         const { data: existingPRs } = await github.rest.pulls.list({
+      #           owner,
+      #           repo,
+      #           head: `${owner}:dev`,
+      #           base: 'qa',
+      #           state: 'open'
+      #         });
   
-              if (existingPRs.length > 0) {
-                console.log(`✅ PR already exists: #${existingPRs[0].number}`);
-                console.log(`URL: ${existingPRs[0].html_url}`);
+      #         if (existingPRs.length > 0) {
+      #           console.log(`✅ PR already exists: #${existingPRs[0].number}`);
+      #           console.log(`URL: ${existingPRs[0].html_url}`);
                 
-                // Actualizar el PR existente con un comentario
-                await github.rest.issues.createComment({
-                  owner,
-                  repo,
-                  issue_number: existingPRs[0].number,
-                  body: `🔄 Dev branch updated. Tests passed successfully.\n\n**Workflow run:** https://github.com/${owner}/${repo}/actions/runs/${context.runId}`
-                });
+      #           // Actualizar el PR existente con un comentario
+      #           await github.rest.issues.createComment({
+      #             owner,
+      #             repo,
+      #             issue_number: existingPRs[0].number,
+      #             body: `🔄 Dev branch updated. Tests passed successfully.\n\n**Workflow run:** https://github.com/${owner}/${repo}/actions/runs/${context.runId}`
+      #           });
                 
-                return;
-              }
+      #           return;
+      #         }
   
-              // Crear nuevo PR
-              const { data: pr } = await github.rest.pulls.create({
-                owner,
-                repo,
-                title: '🚀 Deploy DEV to QA',
-                head: 'dev',
-                base: 'qa',
-                body: `## Automatic deployment from dev to qa
+      #         // Crear nuevo PR
+      #         const { data: pr } = await github.rest.pulls.create({
+      #           owner,
+      #           repo,
+      #           title: '🚀 Deploy DEV to QA',
+      #           head: 'dev',
+      #           base: 'qa',
+      #           body: `## Automatic deployment from dev to qa
                 
-                This PR contains the latest changes from \`dev\` branch ready for QA environment.
+      #           This PR contains the latest changes from \`dev\` branch ready for QA environment.
   
-                ### 📋 Pre-merge Checklist
-                - [ ] Code has been reviewed
-                - [ ] All tests are passing ✅
-                - [ ] Ready for QA environment
+      #           ### 📋 Pre-merge Checklist
+      #           - [ ] Code has been reviewed
+      #           - [ ] All tests are passing ✅
+      #           - [ ] Ready for QA environment
                 
-                ### 🔗 Links
-                - **Workflow run:** https://github.com/${owner}/${repo}/actions/runs/${context.runId}
-                - **Commit:** ${context.sha}
+      #           ### 🔗 Links
+      #           - **Workflow run:** https://github.com/${owner}/${repo}/actions/runs/${context.runId}
+      #           - **Commit:** ${context.sha}
                 
-                ---
-                *Auto-generated by GitHub Actions on ${new Date().toISOString()}*`,
-                              draft: false
-                            });
+      #           ---
+      #           *Auto-generated by GitHub Actions on ${new Date().toISOString()}*`,
+      #                         draft: false
+      #                       });
                 
-                            // Añadir labels al PR
-                            await github.rest.issues.addLabels({
-                              owner,
-                              repo,
-                              issue_number: pr.number,
-                              labels: ['automated', 'deployment', 'qa']
-                            });
+      #                       // Añadir labels al PR
+      #                       await github.rest.issues.addLabels({
+      #                         owner,
+      #                         repo,
+      #                         issue_number: pr.number,
+      #                         labels: ['automated', 'deployment', 'qa']
+      #                       });
                 
-                            console.log(`✅ Pull Request created: #${pr.number}`);
-                            console.log(`URL: ${pr.html_url}`);
+      #                       console.log(`✅ Pull Request created: #${pr.number}`);
+      #                       console.log(`URL: ${pr.html_url}`);
                 
-                            // Opcional: Asignar revisores automáticamente
-                            // await github.rest.pulls.requestReviewers({
-                            //   owner,
-                            //   repo,
-                            //   pull_number: pr.number,
-                            //   reviewers: ['tu-usuario']
-                            // });
+      #                       // Opcional: Asignar revisores automáticamente
+      #                       // await github.rest.pulls.requestReviewers({
+      #                       //   owner,
+      #                       //   repo,
+      #                       //   pull_number: pr.number,
+      #                       //   reviewers: ['tu-usuario']
+      #                       // });
