--- a/.github/workflows/test-base.yml
+++ b/.github/workflows/test-base.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: 
       - feature/**
-
+  # ───────────────────────────────────────────────────────────
+  # Job 1: Llamar al workflow reusable de tests
+  # ───────────────────────────────────────────────────────────
 jobs:
   test:
     name: Run Unit Tests
@@ -31,7 +33,7 @@ jobs:
   # ───────────────────────────────────────────────────────────
   create-pr-to-integration:
     name: Create PR to Integration
-    needs: test  # ⚙️ Solo se ejecuta si los tests pasan
+    needs: merge-to-dev  # ⚙️ Solo se ejecuta si los tests pasan
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/pull-request.yml@main  # 📂 Ruta al workflow reusable
     with:
       source_branch: 'dev'                    # Desde dev
