--- a/.github/workflows/test-base.yml
+++ b/.github/workflows/test-base.yml
@@ -65,4 +65,4 @@ jobs:
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       # Solo si el repo es privado:
-      EXTERNAL_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      EXTERNAL_REPO_TOKEN: ${{ secrets.GH2_TOKEN }}
