--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -17,9 +17,9 @@ jobs:
   test:
     name: Run Qa Tests
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/qa.yml@main
-    #with:
-    #  sonar-token: ${{ secrets.SONAR_TOKEN }}
-    #  branch: "qa"
+    with:
+      sonar-token: ${{ secrets.SONAR_TOKEN }}
+      branch: "qa"
 
   # ───────────────────────────────────────────────────────────
   # Job 2: Crear PR a Integration
