--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -18,8 +18,10 @@ jobs:
     name: Run Qa Tests
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/qa.yml@main
     with:
-      sonar-token: ${{ secrets.SONAR_TOKEN }}
       branch: "qa"
+    secrets:
+      sonar-token: ${{ secrets.SONAR_TOKEN }}
+
 
   # ───────────────────────────────────────────────────────────
   # Job 2: Crear PR a Integration
