--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.organization=dariasmoises979
+sonar.organization=dariasmoises979-blip
 sonar.projectKey=dariasmoises979-blip_app
-sonar.projectName=blip_app
+sonar.projectName=app
 sonar.language=py
 sonar.sources=.
 sonar.python.version=3.10
