--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,6 @@ sonar.projectName=app
 sonar.language=py
 sonar.sources=.
 sonar.python.version=3.10
-sonar.tests=tests
-sonar.test.inclusions=tests/**/*.py
+sonar.tests=system_info_app/test
+sonar.test.inclusions=**/test/**,**/tests/**
 sonar.exclusions=**/__pycache__/**
