--- a/.github/workflows/qa-base.yml
+++ b/.github/workflows/qa-base.yml
@@ -15,26 +15,29 @@ on:
   # ───────────────────────────────────────────────────────────
 jobs:
   test:
+    name: Run Qa Tests
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/qa.yml@main
+    with:
+      branch: "qa"
+    
+      
+
+ # ───────────────────────────────────────────────────────────
+ # Job 2: Análisis con SonarCloud
+ # ───────────────────────────────────────────────────────────
+  sonar-analysis:
+    name: Analizar con SonarCloud
     uses: SonarSource/sonarcloud-github-action@v2
     with:
-      projectBaseDir: ./pipeline-build
-      args: >
-        -Dsonar.organization=dariasmoises979-blip
-        -Dsonar.projectKey=dariasmoises979-blip_app
-        -Dsonar.projectName=app
-        -Dsonar.python.version=3.10
-        -Dsonar.sources=system_info_app
-        -Dsonar.tests=system_info_app/test
-        -Dsonar.test.inclusions=**/test/**,**/tests/**
-        -Dsonar.coverage.exclusions=**/test/**,**/tests/**
+      projectBaseDir: ${{ inputs.projectBaseDir }}
+      args: ${{ inputs.sonar_args }}
     env:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       SONAR_HOST_URL: https://sonarcloud.io
-
-
-
+  
+  
   # ───────────────────────────────────────────────────────────
-  # Job 2: Crear PR a Integration
+  # Job 3: Crear PR a Integration
   # ───────────────────────────────────────────────────────────
   create-pr-to-integration:
     name: Create PR to Integration
