--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,86 +1,83 @@
+name: Run Qa Tests
+
+on:
+  push:
+    branches:
+      - integration
+
 permissions:
   actions: read
   contents: write
   pull-requests: write
   security-events: write
 
-name: Run Qa Tests
-
-on:
-  push:
-    branches:
-      - integration     
+jobs:
   # ───────────────────────────────────────────────────────────
   # Job 1: Llamar al workflow reusable de tests
   # ───────────────────────────────────────────────────────────
-jobs:
   test:
     name: Run Qa Tests
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/integration.yml@main
-    #with:
-    #  sonar-token: ${{ secrets.SONAR_TOKEN }}
-    #  branch: "qa"
 
   # ──────────────────────────────────────────────────────────
-  # Job 2: Crear  Docker Image and Push to Docker Hub
+  # Job 2: Crear Docker Image and Push to Docker Hub
   # ──────────────────────────────────────────────────────────
   build-image:
     name: Build Docker Image
     needs: test
     strategy:
       matrix:
-        environment: [pre, staging, pro]  # 👈 Array de entornos
+        environment: [pre, staging, pro]
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image.yml@main
     with:
       docker_image: mi-aplicacion
       dockerhub_username: dariasmoises979
-      environment: ${{ matrix.environment }}  # 👈 Usa el valor de la matriz
-    
+      environment: ${{ matrix.environment }}
+      
       # Configuración del repo externo
       external_repo: dariasmoises979-blip/app  
       external_repo_ref: main
       external_repo_path: ./app-repo
-    
+      
       # Rutas del build
       dockerfile_path: ./app-repo/local/Dockerfile
       build_context: ./app-repo
-    
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       EXTERNAL_REPO_TOKEN: ${{ secrets.GH2_TOKEN }}
 
   # ──────────────────────────────────────────────────────────
-  # Job 2: Security Scan and Docker Image Creation
+  # Job 3: Security Scan
   # ──────────────────────────────────────────────────────────
   security:
-    name: Security Scan and Docker Image Creation
-    needs: build-image  # 👈 Espera a que se construyan las imágenes
+    name: Security Scan
+    needs: build-image
     strategy:
       matrix:
         environment: [pre, staging, pro]
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/security.yml@main
     with:
       image_name: "dariasmoises979/mi-aplicacion"
-      image_tag: ${{ matrix.environment }}  # 👈 Escanea cada tag
+      image_tag: ${{ matrix.environment }}
       enable_sonar: true
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
   # ──────────────────────────────────────────────────────────
-  # Job 3: prueba uses  
+  # Job 4: Build Híbrido (con seguridad integrada)
   # ──────────────────────────────────────────────────────────
-  pruebas:
-    name: Build Docker Image
+  pruebas-hybrid:
+    name: Build Híbrido - ${{ matrix.environment }}
     needs: test
     strategy:
       matrix:
-        environment: [pre, staging, pro]  # 👈 Array de entornos
+        environment: [pre, staging, pro]
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image-hybrid.yml@main
     with:
       docker_image: mi-aplicacion
       dockerhub_username: dariasmoises979
-      environment: qa
+      environment: ${{ matrix.environment }}
       
       # Configuración del repo externo
       external_repo: dariasmoises979-blip/app
@@ -89,19 +86,39 @@ jobs:
       
       # Rutas del build
       dockerfile_path: ./app-repo/local/Dockerfile
-      build_context: ./app-repo                    # ✅ Sin barra final (correcto)
-      
+      build_context: ./app-repo
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       EXTERNAL_REPO_TOKEN: ${{ secrets.GH2_TOKEN }}
 
-      
-  pruebas2:
-    name: Build 
+  # ──────────────────────────────────────────────────────────
+  # Job 5: Main Pipeline (si quieres usarlo)
+  # ──────────────────────────────────────────────────────────
+  main-pipeline:
+    name: Main Pipeline - ${{ matrix.environment }}
     needs: test
     strategy:
       matrix:
-        environment: [pre, staging, pro]  # 👈 Array de entornos
+        environment: [pre, staging, pro]
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/main-pipeline.yml@main
-  
+    with:
+      docker_image: mi-aplicacion
+      dockerhub_username: dariasmoises979
+      environment: ${{ matrix.environment }}
       
+      # Configuración del repo externo
+      external_repo: dariasmoises979-blip/app
+      external_repo_ref: main
+      external_repo_path: ./app-repo
+      
+      # Rutas del build
+      dockerfile_path: ./app-repo/local/Dockerfile
+      build_context: ./app-repo
+      
+      # Opciones
+      enable_security_scan: true
+      enable_sonar: true
+    secrets:
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      EXTERNAL_REPO_TOKEN: ${{ secrets.GH2_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
